--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@types/html-to-pdfmake": "^2.4.4",
     "axios": "^1.7.9",
     "framer-motion": "^11.13.1",
+    "html-to-pdfmake": "^2.5.17",
+    "pdfmake": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.15",
