--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.13.1",
     "html-to-pdfmake": "^2.5.17",
+    "jodit-react": "^4.1.2",
     "pdfmake": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
